--- a/templates/account/_helpers.html
+++ b/templates/account/_helpers.html
@@ -33,27 +33,23 @@
 {% macro render_user_profile(user, upload_method, settings, private=True) %}
 <div class="row margin-bottom">
     <div class="col-sm-6 col-xs-12 text-center">
+        <div class="shadow shadow-circle">
             {{ render_user_thumbnail(user, upload_method, class="img-circle profile-image img-responsive center-block") }}
-        <h1>{{user.fullname}}</h1>
+        </div>
+        <h1 class="inset-text-grey">{{user.fullname}}</h1>
     </div>
-    <div class="col-sm-6 col-xs-12 white-rounded">
+    <div class="col-sm-6 col-xs-12 white-rounded inset-shadow">
         
         <div class="row">
             <div class="col-xs-6 text-center">
                 {% if user.rank %}
-                <i class="fa fa-trophy fa-4x"></i>
-                <p>{{ _('Rank')}} </p>
-                <p>
-                {% if private %}
-                    <a href="{{url_for('leaderboard.index')}}">
-                {% endif %}
-                {% if not settings %}
-                    {{ user.rank }} {{_('of')}} {{user.total}}
-                {% else %}
-                    {{ user.rank }}
-                {% endif %}
+                    {% if private %}
+                    <a class="remove-colour" href="{{url_for('leaderboard.index')}}">
+                    {% endif %}
+                    <i class="fa fa-trophy fa-4x"></i>
+                    <p>{{ _('Rank')}}</p>
+                    <p class="score">{{ user.rank }}</p>
                 {% if private %}</a>{% endif %}
-                </p>
                 {% else %}
                     <i class="fa fa-trophy fa-4x"></i>
                     <p>{{ _('Rank') }}</p>
@@ -73,7 +69,7 @@
                 {% endif %}
             </div>
         </div>
-        <hr>
+        <hr class="extra-margins">
             
         <div class="text-center">
             <p><i class="fa fa-user"></i> {{ _('Username')}}: {{ user.name }}</p>
@@ -92,10 +88,10 @@
         
             
             
-            <p><i class="fa fa-clock-o"></i> {{ _('Joined') }}: {{ user.created[0:10]}}</p>
+            <p><i class="fa fa-clock-o"></i> {{ _('Joined') }}: <div class="format-date" data-date="{{user.created}}"></div></p>
         
             {% if private %}
-            <a href="{{ url_for('account.update_profile', name=user.name) }}" class="btn btn-default btn-sm"><i class="fa fa-user"></i> {{ _('Edit') }}</a>
+            <a href="{{ url_for('account.update_profile', name=user.name) }}" class="btn btn-default btn-sm btn-padded"><i class="fa fa-user"></i> {{ _('Edit') }}</a>
         {% endif %}
         </div>
     </div>
