--- a/templates/applications/index.html
+++ b/templates/applications/index.html
@@ -5,61 +5,50 @@
 
 {% block content %}
 <script src="{{url_for('static', filename='js/vendor/isotope.pkgd.min.js')}}"></script>
-<div class="container container-padded">
-<div class="row">
-    <div class="col-md-3">
-            <ul data-spy="affix" data-offset-top="200px" class="nav nav-list bs-docs-sidenav affix-top">
-                {% for c in categories %}
-                <li {% if active_cat.short_name==c.short_name%}class="active"{% endif %}><a href="{{url_for('app.app_cat_index', category=c.short_name)}}"><i class="glyphicon glyphicon-chevron-right"></i> {{ c.name }}</a></li>
-                {% endfor %}
-                {% if current_user.is_authenticated() and current_user.admin %}
-                <li {% if active_cat.short_name=="draft"%}class="active"{% endif %}><a href="{{url_for('app.draft')}}"><i class="glyphicon glyphicon-chevron-right"></i> {{ _('Draft') }}</a></li>
-                {% endif %}
-            </ul>
-    </div>
-    <div class="col-md-9">
-            <div id="sorts" class="btn-group pull-right" style="margin-top:12px;">
-                <button class="btn dropdown-toggle" data-toggle="dropdown" data-sort-value="original-order">Order by <span id="order">name</span> <span class="caret"></span></button>
-              <ul class="dropdown-menu" style="top:35px;">
-                  <li><a href="#" data-sort-value="original-order">name</a></li>
-                  <li><a href="#" data-sort-value="date">date</a></li>
-                  <li><a href="#" data-sort-value="activity">activity</a></li>
-                  <li><a href="#" data-sort-value="progress">progress</a></li>
-            </ul>
+
+<div class="container-padded remove-padding-bottom">
+    <section class="dark-grey pattern-classy-fabric">
+        <div class="container padding-top">
+            <div class="col-xs-10 col-xs-offset-1">
+                <ul class="nav nav-tabs">
+                    {% for c in categories %}
+                                <li {% if active_cat.short_name==c.short_name%}class="active" {% else %} class="inset-text-dark-grey"{% endif %}><a href="{{url_for('app.app_cat_index', category=c.short_name)}}"> {{ c.name }}</a></li>
+                            {% endfor %}
+                            {% if current_user.is_authenticated() and current_user.admin %}
+                                <li {% if active_cat.short_name=="draft"%}class="active"{% endif %}><a href="{{url_for('app.draft')}}"> {{ _('Draft') }}</a></li>
+                            {% endif %}
+                </ul>
             </div>
-
-        {% if apps %}
-            {% if active_cat.short_name=="featured"%} 
-            <h1>
-                <i class="glyphicon glyphicon-star"></i> {{pagination.total_count}} {{ _('Featured Projects') }}
-            </h1>
-            <h2>{{ _('A special selection of the most interesting projects') }}</h2>
-            {% elif active_cat.short_name=='draft' %}
-            <h1>
-                <i class="glyphicon glyphicon-wrench"></i> {{pagination.total_count}} {{ _('Draft Projects')}}</h1>
-            <h2>{{ _('Work in progress projects') }}</h2>
-            {% else %}
-            <h1>
-                <i class="glyphicon glyphicon-th"></i> {{pagination.total_count}} {{ active_cat.name }} Projects</h1>
-            <h2>{{ active_cat.description }}</h2>
-            {% endif %}
-
-
-            <div class="projects">
-            {% for app in apps %}
-            {{ helper.show_app(app, active_cat.short_name, current_user, upload_method) }}
-            {% endfor %}
-            </div>
-            {% if pagination.pages > 1 %}
-                {{ helper.render_pagination(pagination) }}
-            {% endif %}
-        {% else %}
-            <h1>
-                <i class="glyphicon glyphicon-th"></i> {{pagination.total_count}} {{ active_cat.name }} Projects</h1>
-            <h2>{{_('Sorry, there are no published projects for this category yet')}}</h2>
-        {% endif %}
-    </div>
-</div>
+        </div>
+    </section>
+        
+                    <div class="col-xs-10 col-xs-offset-1">
+                        <div id="sorts" class="btn-group pull-right">
+                            <button class="btn btn-default dropdown-toggle" data-toggle="dropdown" data-sort-value="original-order">Order by <span id="order">name</span> <span class="caret"></span></button>
+                            <ul class="dropdown-menu" style="top:35px;">
+                              <li><a href="#" data-sort-value="original-order">name</a></li>
+                              <li><a href="#" data-sort-value="date">date</a></li>
+                              <li><a href="#" data-sort-value="activity">activity</a></li>
+                              <li><a href="#" data-sort-value="progress">progress</a></li>
+                            </ul>
+                        </div>
+                    </div>
+            
+                <section class="mid-grey pattern-brushed-alu box-shadow-grey">
+                    {% if apps %}
+                        {% for app in apps %}
+                            {{ helper.show_app(app, active_cat.short_name, current_user, upload_method) }}
+                        {% endfor %}
+                        {% if pagination.pages > 1 %}
+                            {{ helper.render_pagination(pagination) }}
+                        {% endif %}
+                    {% else %}
+                        <div class="container container-padded">
+                            <h2 class="text-center inset-text-grey">{{_('Sorry, there are no published projects for this category yet')}}</h2>
+                        </div>
+                    {% endif %}
+                    </section>
+            
 </div>
 {{ helper.broken_image() }}
 <script>
