--- a/templates/applications/_helpers.html
+++ b/templates/applications/_helpers.html
@@ -224,7 +224,7 @@ function imgError(image) {
             <h1>{{title}}</h1>
         </div>
             <div class="col-xs-12">
-              <ul class="featured">
+              <ul class="featured polaroids">
                   {% for app in apps %}
                   <li><div class="img-polaroid">
                             <a href={{ url_for('app.details', short_name=app.short_name)}} title="{{app.name}}">
