--- a/templates/_footer.html
+++ b/templates/_footer.html
@@ -1,12 +1,12 @@
 <div class="container">
     <div class="row center">
-        <div class="col-sm-3 vcenter sticky-footer-col">
+        <div class="col-sm-3 vcenter hcenter sticky-footer-col">
             <a href="http://bl.uk/">
                 <img class="img-responsive center-block" src="{{url_for('static', filename='img/bl-logo.png')}}">
             </a>
         </div>
         
-        <div class="col-sm-6 vcenter hcenter sticky-footer-col">
+        <div class="col-sm-6 vcenter hcenter hcenter sticky-footer-col">
         {% if not enforce_privacy %}
       
             <div class="row">
@@ -30,7 +30,7 @@
         {% endif %}
         </div>
         
-        <div class="col-sm-3 vcenter sticky-footer-col">
+        <div class="col-sm-3 vcenter hcenter sticky-footer-col">
             <a href="http://pybossa.com/">
                 <img class="img-responsive center-block" src="{{url_for('static', filename='img/pybossa.png')}}">
             </a>
