--- a/templates/account/_helpers.html
+++ b/templates/account/_helpers.html
@@ -38,7 +38,7 @@
         </div>
         <h1 class="inset-text-grey">{{user.fullname}}</h1>
     </div>
-    <div class="col-sm-6 col-xs-12 white-rounded inset-shadow">
+    <div class="col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1 white-rounded inset-shadow">
         
         <div class="row">
             <div class="col-xs-6 text-center">
