--- a/templates/account/profile.html
+++ b/templates/account/profile.html
@@ -23,7 +23,7 @@
                     
                 <div class="row well well-small">
                     <div class="col-md-6">
-                            {{ app_helper.render_app_thumbnail(app, upload_method, class='img-polaroid img-responsive xs-center', style='max-width:100px; max-height:100px;') }}
+                            {{ app_helper.render_app_thumbnail(app, upload_method) }}
                         </div>
                     <div class="col-md-6">
                         <h2>
