--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
     <![endif]-->
 
     <!-- Le fav and touch icons -->
-    <link rel="shortcut icon" href="/static/img/favicon.ico">
+    <link rel="shortcut icon" href="/static/img/favicon.png">
 
     <!-- Le javascript -->
     <script type="text/javascript" src="{{url_for('static', filename='vendor/jquery-2.1.3.min.js')}}"></script>
@@ -59,7 +59,7 @@
             {% if show_cookies_warning %}
             <div id="cookies_warning" class="container">
               <div class="col-md-12 text-center">
-                <p>Cookies help us deliver our services. By using our services, you agree to our use of cookies.<button class="btn btn-xs btn-success" onclick="accept_cookies()"><i class="glyphicon glyphicon-thumbs-up"></i> OK</button> <a class="btn btn-success btn-xs" href="{{url_for('help.cookies_policy')}}"><i class="icon-info-sign"></i> More info</a></p>
+                <span>Cookies help us deliver our services. By using our services, you agree to our use of cookies.<span id="btn-group-cookies" role="group"></span><button class="btn btn-xs btn-success" onclick="accept_cookies()"><i class="glyphicon glyphicon-thumbs-up"></i> OK</button> <a class="btn btn-success btn-xs" href="{{url_for('help.cookies_policy')}}"><i class="icon-info-sign"></i> More info</a></span></span>
               </div>
             </div>
           {% endif %}
