--- a/templates/home/_about.html
+++ b/templates/home/_about.html
@@ -19,10 +19,10 @@
         </div>
     </section>
                    
-    <section class="mid-grey pattern-brushed">
+    <section class="mid-grey pattern-brushed box-shadow-grey">
         <div class="container container-padded">
             <div class="col-md-11">
-                <h1>{{ _('Technology') }}</h1>
+                <h1 class="inset-text-grey">{{ _('Technology') }}</h1>
                 
                 <p>{{ brand }} is built on top of <a href="http://docs.pybossa.com/"> PyBossa </a>, an open-source framework for
                 crowd-sourcing projects. Individual applications are written in HTML and Javascript, with some also making use of
