--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -65,7 +65,9 @@
    <br/>
    <strong>{{_('Submitted Tasks')}}:</strong> {{user.task_runs}}
    " rel="popover" data-original-title="<strong>{{user.fullname}}</strong>">
+   <div class="shadow shadow-circle">
 {{ account_helper.render_user_thumbnail(user, upload_method, style="height:90px; width:90px;", class="img-circle") }}
+   </div>
 </a>
 <span class="label label-success">{{user.task_runs}}</span> <small>{{_('Tasks')}}</small>
 </li>
