--- a/templates/stats/global.html
+++ b/templates/stats/global.html
@@ -4,6 +4,9 @@
 {% import "privacy/locked.html" as privacy %}
 
 {% block content %}
+        <div class="container-padded  remove-padding-bottom">
+        <section class="white">
+            <div class="container container-padded">
 <!-- Leaflet maps -->
 <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.4/leaflet.css" />
  <!--[if lte IE 8]>
@@ -202,4 +205,7 @@ h3 > small {
         {% endif %} 
     </div>
 </div>
+</div>
+        </section>
+    </div>
 {% endblock %}
