--- a/templates/applications/index.html
+++ b/templates/applications/index.html
@@ -12,7 +12,7 @@
             <div class="col-xs-10 col-xs-offset-1">
                 <ul class="nav nav-tabs">
                     {% for c in categories %}
-                                <li {% if active_cat.short_name==c.short_name%}class="active" {% else %} class="inset-text-dark-grey"{% endif %}><a href="{{url_for('app.app_cat_index', category=c.short_name)}}"> {{ c.name }}</a></li>
+                                <li {% if active_cat.short_name==c.short_name%}class="active" {% else %} class=""{% endif %}><a href="{{url_for('app.app_cat_index', category=c.short_name)}}"> {{ c.name }}</a></li>
                             {% endfor %}
                             {% if current_user.is_authenticated() and current_user.admin %}
                                 <li {% if active_cat.short_name=="draft"%}class="active"{% endif %}><a href="{{url_for('app.draft')}}"> {{ _('Draft') }}</a></li>
@@ -34,19 +34,21 @@
                         </div>
                     </div>
             
-                <section class="mid-grey pattern-brushed-alu box-shadow-grey">
+                <section class="white pattern-white-carbon">
                     {% if apps %}
-                        {% for app in apps %}
-                            {{ helper.show_app(app, active_cat.short_name, current_user, upload_method) }}
-                        {% endfor %}
-                        {% if pagination.pages > 1 %}
+                        <ul class="polaroids">
+                            {% for app in apps %}
+                                {{ helper.show_app(app, active_cat.short_name, current_user, upload_method) }}
+                            {% endfor %}
+                        </ul>
+                            {% if pagination.pages > 1 %}
                             {{ helper.render_pagination(pagination) }}
                         {% endif %}
-                    {% else %}
-                        <div class="container container-padded">
-                            <h2 class="text-center inset-text-grey">{{_('Sorry, there are no published projects for this category yet')}}</h2>
-                        </div>
-                    {% endif %}
+                        {% else %}
+                            <div class="container container-padded">
+                                <h2 class="text-center inset-text-grey">{{_('Sorry, there are no published projects for this category yet')}}</h2>
+                            </div>
+                        {% endif %}
                     </section>
             
 </div>
